# binary-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/app/: constants.py  controller.py  create_graphs.py  extract_instructions.py  find_best_candidates.py  instructions.py  program.py  test.py
backend/app/models/: base_form.py  form_data_model.py  function_block_node.py  instruction.py  response_model.py
backend/app/services/: function_detection_service.py  graph_service.py  instruction_service.py
backend/app/utils/: form_base_model.py  heap.py
backend/tests/: binary_data.py  test_create_graph.py  test_extract_instruction.py  test_find_best_candidate.py  test_function_detection_service.py  test_instruction_service.py  test_integration.py
binaries/: curl_aarch64  curl_mips_compiled  curl_x86  openvpn_aarch64
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  index.js
frontend/src/components/: button.jsx  graph.jsx  graphButton.jsx  mainCard.jsx  modal.jsx  pageButton.jsx  progressBar.jsx  showUploadedFile.jsx  uploadFile.jsx
frontend/src/context/: store.js
frontend/src/hooks/: useApi.js  useForm.js  useGraph.js  usePage.js  useToast.js
frontend/src/pages/: formPage.jsx  graphPage.jsx  introPage.jsx  uploadPage.css  uploadPage.jsx
frontend/src/styles/: App.css  graphPage.css
