[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "binary-analysis"
version = "1.0.0"
readme = "../README.md"
repository = "https://github.com/haavapet/binary-analysis"
authors = ["Haavapet <haavapet@stud.ntnu.no>"]
description = "A binary analysis program to help you reverse engineer binaries of unknown instruction set architectures"
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "run:start"


[tool.poetry.dependencies]
python = "^3.8"
python-multipart = "^0.0.6"
fastapi = "^0.95.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
ruff = "^0.0.261"
pytest = "^7.3.1"
pre-commit = "^3.2.2"
httpx = "^0.24.0"

[tool.ruff]
select = ["E", "F", "W", "I", "N", "A", "COM", "C4", "PIE", "T20", "PT", "SIM", "ARG", "ANN"]
ignore = ["ANN101"]
line-length = 100

# TODO location of model to custom file
[tool.ruff.per-file-ignores]
"tests/test_integration.py" = ["N815"]
"app/services/instruction_service.py" = ["ARG003"]